# Drone-Ground-Station

./: CMakeLists.txt  README.md  build.sh
build-camera-Desktop_Qt_5_12_1_clang_64bit-Debug/: Makefile  moc_camera.cpp  ui_camera.h
build-camera-Desktop_Qt_5_12_1_clang_64bit-Debug/camera.app/Contents/: Info.plist
camera/: CMakeCache.txt  CMakeLists.txt  CMakeLists_copy.txt  GimbalUtil.cpp  GimbalUtil.h  Makefile  VideoFaceDetector.cpp  VideoThread.cpp  VideoThread.h  camera.cpp  camera.h  camera.pro  cmake_install.cmake  main.cpp  moc_camera.cpp_parameters
camera/inc/: .GimbalUtil.h.swp  GimbalUtil.h  VideoThread.h  camera.h
camera/src/: .GimbalUtil.cpp.swp  .VideoThread.cpp.swp  GimbalUtil.cpp  VideoFaceDetector.cpp  VideoThread.cpp  camera.cpp  main.cpp
camera/ui/: camera.ui
